# journey

./: .env.dev  .env.sit  .gitconfig  .gitignore  journey_poster.py  pyproject.toml  setting.py
core/: enum.py  exceptions.py  generation_Image.py  image_utils.py  llm.py  prompt.py  prompt_strategy.py
docs/: apifox_curl_example.sh  apifox_doubao_api_example.json  apifox_fastapi_import_guide.md  apifox_request_examples.md  createPictureStream接口文档.md  exception_usage.md
dto/: createPictureReqDto.py  createPictureRespDto.py
frontend/: journey_test.html
model/: createPictureReq.py  createPictureResp.py
service/: generation_Image.py
test/: TEST_README.md  test_connection.py  test_easy_mode.py  test_stream_image.py  test_stream_simple.py
utils/: image_utils.py  logger.py
